java: parallel chunked-upload orchestrator via structured concurrency (M7/D-183)
The last deferred Java-26 item with a real home: structured concurrency (JEP 505)
for chunked-upload fan-out. Builds a chunked-upload orchestrator and uses it to
upload parts in parallel — a genuinely useful feature (cf. Apex D-136).

Bug surfaced + fixed: the generated octet-stream request body was stubbed to
Stream.empty(), so the byte[] body parameter was ignored — every octet-stream
upload (including chunked-upload parts) silently sent no data. Fixed the manager
codegen to Stream.fromBytes(body); the contract stub gained the matching
Stream.fromBytes so managers still compile against it (FR-5.3). (Multipart bodies
have the same placeholder — a separate, harder fix, flagged for later.)

BoxChunkedUpload (emitted verbatim like Tristate/Json) wraps Box's three-step
protocol: create session, slice content, PUT each part with Content-Range +
per-part SHA-1 Digest, commit with the whole-file SHA-1 and ordered parts. Parts
fork into a StructuredTaskScope with awaitAllSuccessfulOrThrow — all run on
virtual threads, the first failure cancels the rest, results read back in fork
order. Emitted only when the spec carries the whole chunked-upload surface (VR-6),
so synthetic-spec gates stay out of it.

--enable-preview is an OPT-IN benefit, isolated to one class — the core SDK runs
on a plain JDK 26. StructuredTaskScope is a preview API, but the ship pom compiles
in TWO passes: the default compile excludes BoxChunkedUpload (no preview), a
second execution compiles just it with --enable-preview. In the jar the core
classes are ordinary Java-26 bytecode (Client/Runtime/ChunkedUploadsManager ->
classfile minor 0) and only BoxChunkedUpload is preview-marked (minor 65535). So
callers who never touch chunked upload run with no flag; adding --enable-preview
unlocks the parallel path. The generated README documents this opt-in.

Base-URL override: Session.baseUrl now honors -Dbox.baseUrl.<name> (soverei